<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RS-Odesk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logo">logo</string>
    <string name="get_token">Get Token</string>
    <string name="load_url">Load Url</string>
    <string name="main_name">Name</string>
    <string name="main_id">ID</string>
    <string name="main_email">Email</string>
    <string name="messages">Messages</string>
    <string name="name">Claude</string>
    <string name="reply">Reply</string>
    <string name="send">Send</string>
    <string name="subject">Subject : </string>
    <string name="message">Hi, Good morning</string>
    <string name="roopasoft">Roopasoft</string>
    <string name="jobs">Jobs</string>
    <string name="notifications">Notifications</string>
    <string name="invitations">Offers</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="search_jobs">Search Jobs</string>
    <string name="search">Search</string>
    <string name="coming_soon">Coming soon</string>
    <string name="title">Title</string>
    <string name="duration">Durtaion</string>
    <string name="snippet">Snippet</string>
    <string name="skills">Skills</string>
    <string name="category">category</string>
    <string name="job_type">job_type</string>
    <string name="budget">budget</string>
    <string name="description">Job Description</string>
    <string name="messages_count">00</string>
    <string name="s_p_firstname">First Name</string>
    <string name="s_p_lastname">Last Name</string>
    <string name="s_p_timezone">Timezone</string>
    <string name="s_p_city">City</string>
    <string name="s_p_state">State</string>
    <string name="s_p_country">Country</string>
    <string name="s_s_sounds">Sounds</string>
    <string name="s_s_vibration">Vibration</string>
    <string name="s_s_light_indication">Light Indication</string>
    
    <string name="s_g_n">Getting Name</string>
    <string name="s_i_c">No Internet Connection</string>
    <string name="s_noitems">Oops! Notifications not found</string>

</resources>