<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="100" >

    <LinearLayout
        android:id="@+id/jobitem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/durtaion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textColor="#A9A9A9" />

        <TextView
            android:id="@+id/snippet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/snippet" />

        <TextView
            android:id="@+id/skills"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/skills" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="3dp"
            android:background="@color/jobs_line_color" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp" />
    </LinearLayout>

</LinearLayout>