<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/dashboard_header_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5.0dip"
        android:paddingTop="5.0dip"
        android:weightSum="100" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="30"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tx_name"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="70"
            android:gravity="right|center_vertical"
            android:text="@string/roopasoft"
            android:textColor="#ffffffff"
            android:textSize="20.0sp"
            android:textStyle="bold" />
    </LinearLayout>

    <WebView
        android:id="@+id/web_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tx_p_firstname"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_p_firstname" />

            <TextView
                android:id="@+id/tx_firstname"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_p_firstname" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tx_p_lastname"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_p_lastname" />

            <TextView
                android:id="@+id/tx_lastname"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_p_lastname" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tx_p_timezone"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_p_timezone" />

            <TextView
                android:id="@+id/tx_timezone"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_p_timezone" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tx_p_city"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_p_city" />

            <TextView
                android:id="@+id/tx_city"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_p_city" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tx_p_state"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_p_state" />

            <TextView
                android:id="@+id/tx_state"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_p_state" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tx_p_country"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_p_country" />

            <TextView
                android:id="@+id/tx_country"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_p_country" />
        </TableRow>
    </TableLayout>

</LinearLayout>