<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/dashboard_header_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5.0dip"
        android:paddingTop="5.0dip"
        android:weightSum="100" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="30"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tx_name"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="70"
            android:gravity="right|center_vertical"
            android:text="@string/roopasoft"
            android:textColor="#ffffffff"
            android:textSize="20.0sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tx_settings"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:background="@drawable/ed_background"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="20sp"
        android:text="@string/settings"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:weightSum="100" >

            <TextView
                android:id="@+id/tx_s_sounds"
                style="@style/profile_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="85"
                android:text="@string/s_s_sounds" />

            <CheckBox
                android:id="@+id/check_sounds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:gravity="center_vertical" />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/darker_gray" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:weightSum="100" >

            <TextView
                android:id="@+id/tx_s_vibration"
                style="@style/profile_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="85"
                android:text="@string/s_s_vibration" />

            <CheckBox
                android:id="@+id/check_vibration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:gravity="center_vertical" />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/darker_gray" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:weightSum="100" >

            <TextView
                android:id="@+id/tx_s_light_indication"
                style="@style/profile_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="85"
                android:text="@string/s_s_light_indication" />

            <CheckBox
                android:id="@+id/check_light_indication"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:gravity="center_vertical" />
        </TableRow>
    </TableLayout>

</LinearLayout>